# backend-beta

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: backend-ci.yml
authentication-gen/: README.md  admin_token_manager.py  user_token_gen.py
config/: base.toml  development.toml  production.toml  staging.toml
crates/deepmail-api/: Cargo.toml  README.md
crates/deepmail-api/src/: auth.rs  main.rs  state.rs
crates/deepmail-api/src/middleware/: ip_allowlist.rs  mod.rs  mtls.rs  rate_limit.rs
crates/deepmail-api/src/routes/: admin_abuse.rs  admin_backup.rs  admin_replay.rs  auth_tokens.rs  dashboard.rs  health.rs  metrics.rs  mod.rs  results.rs  upload.rs  ws.rs  ws_results.rs
crates/deepmail-common/: Cargo.toml  README.md  build.rs
crates/deepmail-common/proto/: billing.proto  dkim.proto  homograph.proto
crates/deepmail-common/src/: abuse.rs  audit.rs  auth.rs  backup.rs  cache.rs  circuit_breaker.rs  config.rs  errors.rs  lib.rs  quota.rs  retention.rs  reuse.rs  telemetry.rs
crates/deepmail-common/src/db/: migrations.rs  mod.rs  schema_validation.rs
crates/deepmail-common/src/models/: mod.rs
crates/deepmail-common/src/queue/: mod.rs
crates/deepmail-common/src/redis_scripts/: abuse_velocity.lua  token_bucket.lua
crates/deepmail-common/src/upload/: mod.rs  quarantine.rs  validation.rs
crates/deepmail-common/src/utils/: mod.rs
crates/deepmail-dkim/: Cargo.toml
crates/deepmail-dkim/migrations/: 0001_init_dkim.sql
crates/deepmail-dkim/src/: config.rs  main.rs
crates/deepmail-sandbox/: Cargo.toml  README.md
crates/deepmail-sandbox-worker/: Cargo.toml  README.md
crates/deepmail-sandbox-worker/src/: main.rs
crates/deepmail-sandbox/assets/seccomp/: chromium-minimal.json
crates/deepmail-sandbox/src/: error.rs  lib.rs  main.rs
crates/deepmail-sandbox/src/executor/: README.md  docker.rs  mod.rs
crates/deepmail-sandbox/src/model/: mod.rs
crates/deepmail-sandbox/src/security/: mod.rs  url_guard.rs
crates/deepmail-worker/: Cargo.toml  README.md
crates/deepmail-worker/src/: main.rs
crates/deepmail-worker/src/graph/: README.md  mod.rs
crates/deepmail-worker/src/pipeline/: README.md  attachment_analyzer.rs  calibration.rs  email_parser.rs  geo_intel.rs  geoip.rs  header_analysis.rs  ioc_extractor.rs  mod.rs  phishing_keywords.rs  scoring.rs  url_analyzer.rs
crates/deepmail-worker/src/pipeline/attachment_analyzer/: README.md
crates/deepmail-worker/src/pipeline/email_parser/: README.md
crates/deepmail-worker/src/pipeline/header_analysis/: README.md
crates/deepmail-worker/src/pipeline/ioc_extractor/: README.md
crates/deepmail-worker/src/pipeline/phishing_keywords/: README.md
crates/deepmail-worker/src/pipeline/scoring/: README.md
crates/deepmail-worker/src/pipeline/url_analyzer/: README.md
crates/deepmail-worker/src/similarity/: README.md  mod.rs
docs/deployment/: README.md  docker-compose.yml  env-vars.md  system-limits.md
docs/multi-tenant/: README.md
docs/observability/: README.md
docs/plans/: 2026-03-20-phase-4-sandbox-realtime-design.md  2026-03-20-phase-4-sandbox-realtime-implementation.md  2026-03-20-phase-5-1-reliability-design.md  2026-03-20-phase-5-1-reliability-implementation.md  2026-03-20-phase-5-2-production-hardening-design.md  2026-03-20-phase-5-2-production-hardening-implementation.md  2026-03-20-phase-5-enterprise-readiness-design.md  2026-03-20-phase-5-enterprise-readiness-implementation.md
docs/rate-limiting/: README.md
docs/security/: auth-token-policy.md
scripts/ci/: migration_smoke.sh
