[workspace]
resolver = "2"
members = [
    "crates/deepmail-api",
    "crates/deepmail-common",
    "crates/deepmail-worker",
    "crates/deepmail-sandbox",
    "crates/deepmail-sandbox-worker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DeepMail Security Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["multipart", "ws"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "request-id"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Redis
redis = { version = "0.25", features = ["tokio-comp", "streams"] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
infer = "0.15"

# Configuration
config = { version = "0.14", features = ["toml"] }

# HTTP types
http = "1"

# Email parsing
mailparse = "0.15"

# Pattern matching
regex = "1"
lazy_static = "1"
async-trait = "0.1"
url = "2"
futures-util = "0.3"
jsonwebtoken = "9"
tracing-opentelemetry = "0.29"
opentelemetry = { version = "0.28", features = ["trace"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.28", features = ["trace"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
