[package]
name = "deepmail-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DeepMail API server: Axum-based HTTP layer for upload, query, and auth"

[[bin]]
name = "deepmail-api"
path = "src/main.rs"

[dependencies]
deepmail-common = { path = "../deepmail-common" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
http = { workspace = true }
rusqlite = { workspace = true }
redis = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
