[package]
name = "deepmail-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared library for DeepMail: config, errors, DB, Redis, models, validation"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
infer = { workspace = true }
config = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
