[package]
name = "deepmail-sandbox-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DeepMail isolated sandbox worker"

[[bin]]
name = "deepmail-sandbox-worker"
path = "src/main.rs"

[dependencies]
deepmail-common = { path = "../deepmail-common" }
deepmail-sandbox = { path = "../deepmail-sandbox" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
