[package]
name = "deepmail-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
deepmail-common = { path = "../deepmail-common" }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.24", features = ["tokio-comp", "aio"] }
playwright = "0.0.21" # Rust bindings for Playwright
async-trait = "0.1"
