[package]
name = "deepmail-sandbox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DeepMail sandbox abstraction and executors"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
