[package]
name = "deepmail-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DeepMail worker: async job consumer and analysis pipeline"

[[bin]]
name = "deepmail-worker"
path = "src/main.rs"

[dependencies]
deepmail-common = { path = "../deepmail-common" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
redis = { workspace = true }
hostname = "0.4"
