[package]
name = "deepmail-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DeepMail worker: async job consumer and analysis pipeline"

[[bin]]
name = "deepmail-worker"
path = "src/main.rs"

[dependencies]
deepmail-common = { path = "../deepmail-common" }
deepmail-sandbox = { path = "../deepmail-sandbox" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
redis = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
infer = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
mailparse = { workspace = true }
reqwest = { workspace = true }
hostname = "0.4"
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
